# array-protocol

./: .envrc  .gitignore  .rustfmt.toml  Anchor.toml  Cargo.toml  Makefile  README.md  drift-program-id.env  drift-program-id.txt  package-lock.json  package.json  rust-toolchain.toml
fixtures/drift/: 21caANGHd1tuGpBgyxVhM93Mwwq36VJygo7nC9cTeqKf.json  (+45 more)
idls/: drift.json  kamino_lending.json  kamino_lending_legacy.json
programs/array_protocol/: Cargo.toml
programs/array_protocol/src/: ids.rs  lib.rs
programs/array_protocol/src/controller/: errors.rs  mod.rs
programs/array_protocol/src/ix/: create_user.rs  deposit_spl.rs  drift_deposit.rs  drift_init_user.rs  drift_init_user_stats.rs  drift_withdraw.rs  execute_drift_deposit.rs  init_program_state.rs  init_token_vault.rs  init_user.rs  init_user_token_vault.rs  kamino_deposit.rs  mod.rs  withdraw_spl.rs
programs/array_protocol/src/state/: mod.rs  program_state.rs  token_vault.rs  user.rs  user_token_vault.rs
tests/: 0-init-program-state.test.ts  00-array-protocol.ts  1-create-user.test.ts  2-init-supported-token-vaults-usdc.test.ts  3-vault-usdc.test.ts  4-mock-vault.test.ts  5-drift-deposit.test.ts  6-drift-withdraw.test.ts  array-protocol.ts  vault.test.ts
utils/account-extractor/: Cargo.toml
utils/account-extractor/src/: config.rs  drift_idl.rs  extractor.rs  extractorv2.rs  main.rs  pda.rs  types.rs  utils.rs
utils/account-extractor/src/pda/: derivation.rs  generators.rs  mod.rs  tests.rs  types.rs
utils/account-extractor/src/processors/: mod.rs  spot_market.rs  state.rs  token.rs
(+54 files in other folders)
