[package]
name = "array_protocol" 
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
devnet = []
cpi = ["no-entrypoint"]
mainnet-beta=[]
default=["mainnet-beta"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = { version = "0.31.0" }
bytemuck = "1.21.0"
