[package]
name = "account-extractor"
version = "0.1.0"
edition = "2021"
description = "Extract Solana program accounts for testing"

# This makes the crate a standalone project, not part of the parent workspace
[workspace]

# Explicitly define the binary target
[[bin]]
name = "account-extractor"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.0"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18.26"
solana-program = "1.18.26"
solana-client = "1.18.26"
solana-account-decoder = "1.18.26"
tokio = { version = "1", features = ["full"] }
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"
anchor-lang = { version = "0.30.1", features = ["derive"] }
anchor-client = "0.30.1"

[lints.rust]
proc_macro_derive_resolution_fallback = "warn"